--- a/src/app.css
+++ b/src/app.css
@@ -22,8 +22,8 @@
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 100px;
-  width: 1200px;
-  height: 700px;
+  width: auto;
+  height: auto;
   background-color: rgb(179, 224, 244); /* For browsers that do not support gradients */
   background-image: linear-gradient(rgb(134, 140, 207),rgb(172, 229, 236));
 }
@@ -49,7 +49,7 @@ button {
   border-radius: 25px;
   margin-left: 1rem;
   font-family: 'Quicksand', sans-seri;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: lighter;
   border: solid rgb(150, 145, 169);
 }
@@ -60,7 +60,7 @@ input{
   font-weight: lighter;
   display: block;
   box-sizing: border-box;
-  width: 500px;
+  min-width: 50%;
   border: 2px solid #333;
   outline: none;
   border: 1px solid rgb(150, 145, 169);
@@ -104,4 +104,34 @@ p {
     font-family: 'Quicksand', sans-seri;
     font-weight: lighter;
     font-size: 30px;
+}
+
+
+@media only screen and (min-width: 200px) {
+  .search-sec {flex-direction: column;}
+  input {margin-bottom: 1rem;height: 50px;}
+  .heading{font-size: 40px;text-align: center;}
+}
+@media only screen and (min-width: 500px) {
+  .search-sec {flex-direction: column;}
+  input {margin-bottom: 1rem;height: 50px;}
+}
+
+@media only screen and (min-width: 600px) {
+  .search-sec {flex-direction: row;} 
+}
+
+@media only screen and (min-width: 700px) {
+  .search-sec {flex-direction: row;} 
+}
+
+@media only screen and (min-width: 800px) {
+  .search-sec {flex-direction: row;}
+  button {height: 60px;}
+}
+
+@media only screen and (min-width: 1100px) {
+  .search-sec {flex-direction: row;}
+  button {height: 60px;}
+  .heading{font-size: 60px;text-align: center;}
 }
