--- a/src/UI/LoadingIndicator.css
+++ b/src/UI/LoadingIndicator.css
@@ -11,10 +11,10 @@
   width: 44px;
   height: 44px;
   margin: 6px;
-  border: 6px solid #ff2058;
+  border: 6px solid #991b1b;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #ff2058 transparent transparent transparent;
+  border-color: #991b1b transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
