--- a/src/UI/LoadingIndicator.css
+++ b/src/UI/LoadingIndicator.css
@@ -1,20 +1,21 @@
 .lds-ring {
   display: inline-block;
   position: relative;
-  width: 54px;
-  height: 54px;
+  width: 25px;
+  height: 25px;
+  margin-left:10px
 }
 .lds-ring div {
   box-sizing: border-box;
   display: block;
   position: absolute;
-  width: 44px;
-  height: 44px;
+  width: 20px;
+  height: 20px;
   margin: 6px;
-  border: 6px solid #ff2058;
+  border: 6px solid #ffffff;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #ff2058 transparent transparent transparent;
+  border-color: #ffffff transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
