--- a/src/app.css
+++ b/src/app.css
@@ -7,28 +7,61 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 h1 {
-  text-align: center;
-  margin-top: 3rem;
+  font-size: 24pt;
+  margin-bottom: 5px;
 }
 .container {
   height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 2rem;
-}
-input {
-  outline: none;
-  border: 1px solid black;
-  width: 300px;
-  height: 30px;
-  padding: 4px;
-  color: #000;
+  align-items: center;
+  justify-content: center;
 }
 
-img {
-  height: 100px;
+.widget-wrapper {
+  border: 3px solid #fff;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-size: 300% 300%;
+  background-image: linear-gradient(
+        -45deg, 
+        rgb(35, 193, 103) 0%, 
+        rgb(0, 190, 57) 25%, 
+        rgb(75, 96, 255) 51%, 
+        rgb(2, 0, 27) 100%
+  );  
+  animation: AnimateBG 5s ease infinite;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+@keyframes AnimateBG { 
+  0%{background-position: 0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+.weather-header {
+  display: inline-flex;
+}
+
+.city-search {
+  outline: none;
+  border: 1px solid #fff;
+  flex-grow: 1;
+  min-width: 200px;
+  height: 30px;
+  padding: 6px;
+  color: #fff;
+  border-radius: 7px;
+  background-color: transparent;
 }
 .credit {
   position: fixed;
@@ -39,14 +72,19 @@ img {
 p {
   font-size: 2rem;
 }
-
-button {
+.search-sec {
+  display: flex;
+}
+.find-me-btn {
   cursor: pointer;
   background-color: transparent;
   border: 1px solid #8a2b06;
-  padding: 0.5rem 2rem;
-  border-radius: 25px;
-  margin-left: 1rem;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: bold;
+  padding: 1px 5px;
+  border-radius: 7px;
+  margin-left: 10px;
+  transition: all .2s;
+  color: #8a2b06;
+}
+.find-me-btn:hover {
+  transform: scale(1.1);
 }
